asteria/core/tests/errors/elaboration_errors/incorrect_kind_for_function_type_return_type.asteriacore
x : forall (f : Type -> Type).
    forall (a : Type).
      a -> f
  = x
  ;;
